--- a/index.html
+++ b/index.html
@@ -1,10 +1,97 @@
 
-
-
-
-
-
-
-
-
-                                     you & u.s.
+<!DOCTYPE html>
+<html>
+	<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>UltraSuave</title>
+		<style type="text/css">
+			body {
+				width: 100vw;
+				height: 100vh;
+				text-align: center; 
+				margin: 0; 
+				padding: 0; 
+				font-family: Courier New; 
+				font-size: 1.1rem; 
+				font-style: normal;
+				line-height: 1.5rem;
+				background-color: white;
+				background: url(
+					data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAFUlEQVQYV2O8ffu2LwMDAwMjiAABAC1zAuFbE/raAAAAAElFTkSuQmCC
+					);
+				color: black !important;
+				text-rendering: geometricPrecision;
+				white-space: pre-line;
+				overflow: hidden;
+				box-shadow: 0px 0px 100px rgba(0,0,0,0.1) inset;
+			}
+			.nostr {
+				display: block;
+				position: absolute;
+				word-wrap:break-word;
+				width: 50%;
+				top: 2%; left: 50%;
+				transform: translate(-50%, 0%) rotateZ(2deg);
+			}
+			.words {
+				display: block; 
+				position: absolute; 
+				top: 50%; left: 50%;
+  				transform: translate(-50%,-50%) rotateZ(-2deg);
+				cursor: default;
+				background-color: transparent;
+			}
+			.words a {
+				display: inline-block;
+				text-decoration: none; 
+				border-bottom: 0.05rem solid black;
+				padding-bottom: 0.0rem;
+				color: black;
+				background-color: transparent;
+			}		
+			.words a:hover {
+				border-bottom: 0.05rem solid transparent;
+				position: relative;
+  				-webkit-transform: scale(0.9, 2.0); /* Safari Chrome */
+    			   -moz-transform: scale(0.9, 2.0); /* Firefox */
+			        -ms-transform: scale(0.9, 2.0); /* IE 9 */
+			         -o-transform: scale(0.9, 2.0); /* Opera */
+			            transform: scale(0.9, 2.0);
+			    -webkit-animation: fidget 0.05s infinite; /* Safari 4-8 */
+  						animation: fidget 0.05s infinite;
+			}
+			@-webkit-keyframes fidget { /* Safari 4.0 - 8.0 */
+				0%   {top: -1px;}
+				25%  {top: 5px;}
+				75%  {top: -2px}
+				82%  {top: 10px;}
+				100% {top: -10px;}
+			}
+			@keyframes fidget {
+				0%   {top: -1px;}
+				25%  {top: 5px;}
+				75%  {top: -2px}
+				82%  {top: 10px;}
+				100% {top: -10px;}
+			}
+			/* smartphones, touchscreens */
+			@media (hover: none) and (pointer: coarse) {
+    			.words a {
+					border-bottom: 0;
+					position: relative;
+	  				-webkit-transform: scale(0.9, 2.0); /* Safari Chrome */
+	    			   -moz-transform: scale(0.9, 2.0); /* Firefox */
+				        -ms-transform: scale(0.9, 2.0); /* IE 9 */
+				         -o-transform: scale(0.9, 2.0); /* Opera */
+				            transform: scale(0.9, 2.0);
+				    -webkit-animation: fidget 0.05s infinite; /* Safari 4-8 */
+	  						animation: fidget 0.05s infinite;
+	  			}
+			}
+		</style>
+	</head>
+	<body>
+		<span class="words"><img src=""><br><a href="https://instagram.com/ultrasuave.music/">Instagram</a> | <a href="https://ultra-suave.bandcamp.com">BandCamp</a> | <a href=mailto:"music@ultra-suave.com">Contact</a></span>
+	</body>
+</html>
