--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
 		</style>
 	</head>
 	<body>
-		<span class="words"><img src=""><br><a href="https://instagram.com/ultrasuave.music/">Instagram</a> | <a href="https://ultra-suave.bandcamp.com">BandCamp</a> | <a href=mailto:"music@ultra-suave.com">Contact</a></span>
+		<span class="words"><img src="../logo.png" style="width:50vw;"><br><a href="https://instagram.com/ultrasuave.music/">Instagram</a> | <a href="https://ultra-suave.bandcamp.com">BandCamp</a> | <a href=mailto:"music@ultra-suave.com">Contact</a></span>
 	</body>
 </html>
