--- a/index.html
+++ b/index.html
@@ -26,14 +26,6 @@
 				overflow: hidden;
 				box-shadow: 0px 0px 100px rgba(0,0,0,0.1) inset;
 			}
-			.nostr {
-				display: block;
-				position: absolute;
-				word-wrap:break-word;
-				width: 50%;
-				top: 2%; left: 50%;
-				transform: translate(-50%, 0%) rotateZ(2deg);
-			}
 			.words {
 				display: block; 
 				position: absolute; 
@@ -92,6 +84,7 @@
 		</style>
 	</head>
 	<body>
-		<span class="words"><img src="../logo.png" style="width:50vw;"><br><a href="https://instagram.com/ultrasuave.music/">Instagram</a> | <a href="https://ultra-suave.bandcamp.com">BandCamp</a> | <a href=mailto:"music@ultra-suave.com">Contact</a></span>
+		<span class="words">
+			<img src="../logo.png" style="width:50vw;"><br><a href="https://instagram.com/ultrasuave.music/">Instagram</a> | <a href="https://ultra-suave.bandcamp.com">BandCamp</a> | <a href=mailto:"music@ultra-suave.com">Contact</a></span>
 	</body>
 </html>
