--- a/index.html
+++ b/index.html
@@ -72,14 +72,15 @@
 			@media (hover: none) and (pointer: coarse) {
     			.words a {
 					border-bottom: 0;
+					font-size: 0.9rem;
 					position: relative;
 	  				-webkit-transform: scale(0.9, 2.0); /* Safari Chrome */
 	    			   -moz-transform: scale(0.9, 2.0); /* Firefox */
 				        -ms-transform: scale(0.9, 2.0); /* IE 9 */
 				         -o-transform: scale(0.9, 2.0); /* Opera */
 				            transform: scale(0.9, 2.0);
-				    -webkit-animation: fidget 0.05s infinite; /* Safari 4-8 */
-	  						animation: fidget 0.05s infinite;
+				    -webkit-animation: fidget 0.53s infinite; /* Safari 4-8 */
+	  						animation: fidget 0.53s infinite;
 	  			}
 			}
 		</style>
