--- a/index.html
+++ b/index.html
@@ -71,22 +71,17 @@
 			/* smartphones, touchscreens */
 			@media (hover: none) and (pointer: coarse) {
     			.words a {
+					display: block;
+					width: 50vw;
 					border-bottom: 0;
 					font-size: 0.8rem;
 					position: relative;
-	  				-webkit-transform: scale(0.9, 1.5); /* Safari Chrome */
-	    			   -moz-transform: scale(0.9, 1.5); /* Firefox */
-				        -ms-transform: scale(0.9, 1.5); /* IE 9 */
-				         -o-transform: scale(0.9, 1.5); /* Opera */
-				            transform: scale(0.9, 1.5);
-				    -webkit-animation: fidget 0.53s infinite; /* Safari 4-8 */
-	  						animation: fidget 0.53s infinite;
-	  			}
+	  		}
 			}
 		</style>
 	</head>
 	<body>
 		<span class="words">
-			<img src="../logo.png" style="width:50vw;"><br><a href="https://instagram.com/ultrasuave.music/">Instagram</a> | <a href="https://ultra-suave.bandcamp.com">BandCamp</a> | <a href=mailto:"music@ultra-suave.com">Contact</a></span>
+			<img src="../logo.png" style="width:50vw;"><br><a href="https://instagram.com/ultrasuave.music/">Instagram</a>&nbsp;<a href="https://ultra-suave.bandcamp.com">BandCamp</a>&nbsp;<a href=mailto:"music@ultra-suave.com">Contact</a></span>
 	</body>
 </html>
