--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 			}
 			/* smartphones, touchscreens */
 			@media (hover: none) and (pointer: coarse) {
-    			.words a {
+    			.words {
 					display: block;
-					width: 100vw;
+					width: 85vw;
 					border-bottom: 0;
 					position: relative;
 	  		}
