--- a/index.html
+++ b/index.html
@@ -6,60 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>UltraSuave</title>
 		<link rel="icon" type="image/x-icon" href="../favicon/favicon.ico">
-		<style type="text/css">
-			body {
-				width: 100vw;
-				height: 100vh;
-				text-align: center; 
-				margin: 0; 
-				padding: 0; 
-				font-family: Courier New; 
-				font-size: 1.1rem; 
-				font-style: normal;
-				line-height: 1.5rem;
-				background-color: white;
-				background: url(
-					data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAFUlEQVQYV2O8ffu2LwMDAwMjiAABAC1zAuFbE/raAAAAAElFTkSuQmCC
-					);
-				color: black !important;
-				text-rendering: geometricPrecision;
-				white-space: pre-line;
-				overflow: hidden;
-				box-shadow: 0px 0px 100px rgba(0,0,0,0.1) inset;
-			}
-			.words {
-				display: block; 
-				position: absolute; 
-				top: 50%; left: 50%;
-  				transform: translate(-50%,-50%) rotateZ(-2deg);
-				cursor: default;
-				background-color: transparent;
-			}
-			.words a {
-				display: inline-block;
-				text-decoration: none; 
-				border-bottom: 0.05rem solid black;
-				padding-bottom: 0.0rem;
-				color: black;
-				background-color: transparent;
-			}		
-			.words a:hover {
-				border-bottom: 0.05rem solid transparent;
-				position: relative;
-			}
-			/* smartphones, touchscreens */
-			@media (hover: none) and (pointer: coarse) {
-    			.words {
-					display: block;
-					width: 85vw;
-					border-bottom: 0;
-					position: relative;
-	  		}
-			}
-		</style>
+		  <link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<span class="words">
-			<img src="../logo.png" style="width:50vw;"><br><a href="https://instagram.com/ultrasuave.music/">Instagram</a>&nbsp;<a href="https://ultra-suave.bandcamp.com">BandCamp</a>&nbsp;<a href=mailto:"music@ultra-suave.com">Contact</a></span>
+			<img src="../logo.png" class="logo"><br><a href="https://ultra-suave.bandcamp.com">music</a>&nbsp;·&nbsp;<a href=mailto:"music@ultra-suave.com">bookings</a>&nbsp;·&nbsp;<a href="https://instagram.com/ultrasuave.music/">social</a></span>
 	</body>
 </html>
